# openenv

./: .dockerignore  .env.example  .gitignore  .space  API_DOCS.md  API_KEYS_SETUP.md  BENCHMARK_RESULTS.md  CORS_FIX_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_VERIFIED.md  Dockerfile  ERROR_HANDLING_GUARANTEE.md  EVALUATION_READINESS.md  FINAL_IMPROVEMENTS_SUMMARY.md  FIXES_APPLIED.md  GITHUB_PUSH_GUIDE.md  HF_DEPLOYMENT_GUIDE.md  HF_DEPLOYMENT_SUMMARY.md  HONEST_VALIDATION_REPORT.md  IMPORTANT_FOR_RECRUITERS.md  LITELLM_PROXY_FIX.md  OPENENV_COMPLIANCE_REPORT.md  PHASE2_DUPLICATE_MARKERS_FIX.md  PHASE2_FIX_SUMMARY.md  README.md  README_HF_SPACE.md  README_SHARING.md  RECRUITER_GUIDE.md  RESUBMISSION_CHECKLIST.md  SCORING_ANALYSIS.md  SECURITY.md  SUBMISSION_19_READY.md  SUBMISSION_CHECKLIST.md  TESTING_GUIDE.md  TESTING_RESULTS.md  VERIFICATION_REPORT.md  __init__.py  final_validation.py  inference.py  main.py  (+22 more)
.github/workflows/: ci.yml
baseline/: agent.py
examples/: README.md  code_review_walkthrough.py  data_cleaning_walkthrough.py  email_triage_walkthrough.py  incident_response_walkthrough.py
grading/: __init__.py  utils.py
server/: app.py
tasks/: base_environment.py
tasks/code_review/: __init__.py  data.py  environment.py  grader.py
tasks/data_cleaning/: __init__.py  data.py  environment.py  grader.py
tasks/email_triage/: __init__.py  data.py  environment.py  grader.py
tasks/incident_response/: __init__.py  data.py  (+2 more)
tests/: __init__.py  conftest.py  test_environments.py  test_grading_utils.py  test_models.py  test_strict_score_bounds.py
